--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-popover": "1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
