--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.14.0",
     "react-table": "^7.8.0"
   },
