--- a/flash_fuel_backend/pom.xml
+++ b/flash_fuel_backend/pom.xml
@@ -35,6 +35,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.0-RC1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
