connected backend to database to build tables from entities

--- a/flash_fuel_backend/pom.xml
+++ b/flash_fuel_backend/pom.xml
@@ -54,6 +54,13 @@
 			<version>3.11.2</version>
 			<scope>test</scope>
 		</dependency>
+
+	<dependency>
+		<groupId>com.mysql</groupId>
+		<artifactId>mysql-connector-j</artifactId>
+		<version>8.0.33</version>
+	</dependency>
+
 	</dependencies>
 
 	<build>
