--- a/flash_fuel_backend/src/main/resources/application.properties
+++ b/flash_fuel_backend/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # This makes it work without database
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# spring.datasource.url=jdbc:mysql://localhost:3306/flashfueldb?useSSL=false
+spring.datasource.url=jdbc:mysql://15.204.218.55:3306/flashfueldb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=T*#>XPWL$y&9g7sx
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
